# dgen

./: .gitignore  CMakeLists.txt
compiler/: CMakeLists.txt
compiler/src/: main.c
include/: common.h  lang.h  lexer.h  parser.h  semanter.h  utils.h
include/lang/: dgen.h  sqf.h
src/: generator.c  lang.c  lexer.c  parser.c  rpn_parser.c  semanter.c  utils.c
src/lang/: dgen.c  sqf.c
tests/: CMakeLists.txt  parsing.c
tests/resources/: test_arithmetic.dgen  test_arrays.dgen  test_declarations.dgen  test_functions.dgen  test_logical.dgen  test_loops.dgen  test_struct.dgen  test_switch.dgen
