CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(dgen)

SET(SOURCE_DIR src)
SET(INCLUDE_DIR include)

ENABLE_TESTING()
SET(CTEST_CUSTOM_MAXIMUM_PASSED_TEST_OUTPUT_SIZE 10485760)  # 10 MB for passed tests
SET(CTEST_CUSTOM_MAXIMUM_FAILED_TEST_OUTPUT_SIZE 10485760)  # 10 MB for failed tests
INCLUDE(CTest)

SET(CMAKE_C_FLAGS_RELEASE "-g0 -Ofast")
SET(CMAKE_C_FLAGS_DEBUG "-g3 -O0")
SET(CMAKE_C_FLAGS "-Wall -Wextra")
SET(CMAKE_LINKER_FLAGS "")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/output)

FILE(GLOB_RECURSE SRC_FILES ${SOURCE_DIR}/*.c)

INCLUDE_DIRECTORIES(include)

ADD_SUBDIRECTORY(compiler)
ADD_SUBDIRECTORY(tests)